--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+future-fstrings (1.2.0-1kern2) bionic; urgency=medium
+
+  [ Athanaseus Javaas Ramaila ]
+  * Python3 Support
+
+ -- KERN packaging <packaging@kernsuite.info>  Thu, 11 Jun 2020 13:34:16 +0200
+
 future-fstrings (1.2.0-1kern1) bionic; urgency=low
 
   * Initial release 1.2.0
